Fix word overflow on doubt answering response

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,7 +376,7 @@
 
 #doubtAnswer {
 	margin-top: 1rem;
-	width: 390px;
+	width: 370px;
 	margin-left: 1rem;
 	font-size: 20px;
 	color: #fff;
